name:                meatloaf
version:             0.1.0.0
description:         A (very) annoying game
license:             BSD3
license-file:        LICENSE
author:              Josiah VanderZee
maintainer:          josiah_vanderzee@mediacombb.net
copyright:           2023 Josiah VanderZee, Anastasia Neradt
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable meatloaf
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , FunGEn
                     , ALUT
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:        Media
